Tweak message list color to better match Arc

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -4,8 +4,11 @@
 @colorAccent: #5294e2;
 
 @colorWindowBg: #f6f7f8;
+@colorBodyBg: #ffffff;
+@colorBodyBgDarker: darken(@colorBodyBg, 2%);
 @colorBorder: #d4d5db;
 @colorText: #231f20;
+@colorWarningBar: darken(@colorWindowBg, 5%);
 
 @border-medium: #dcdfe3;
 
@@ -22,6 +25,11 @@
 @colorMenuItemHover: tint(@colorSidebarBg, 90%);
 @colorMenuText: @colorText;
 @colorMenuTextActive: #ffffff;
+
+@colorBtnBgLight: #ffffff;
+@colorBtnBorderLight: #cfd6e6;
+@colorBtnBgActiveLight: @colorAccent;
+@colorBtnBorderActiveLight: @colorAccent;
 
 @colorBtnBgDark: #505666;
 @colorBtnBorderDark: #2b2e39;
