Tweak thread list colors to better match Arc

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -21,6 +21,10 @@
 @colorSidebarTextLighter: lighten(@colorSidebarText, 5%);
 @colorSidebarTextActive: #ffffff;
 
+@colorListBg: #ffffff;
+@colorListItemHover: tint(@colorSidebarBg, 90%);
+@colorListTextActive: #ffffff;
+
 @colorMenuBg: #ffffff;
 @colorMenuItemHover: tint(@colorSidebarBg, 90%);
 @colorMenuText: @colorText;
