--- a/styles/threadlist.less
+++ b/styles/threadlist.less
@@ -4,11 +4,11 @@
 // Thread list items
 //------------------------------------------------------------
 .thread-list .list-item {
-	background-color: @threadlist !important;
-	border-bottom: 1px solid @border-medium !important;
+	background-color: @colorListBg !important;
+	border-bottom: 1px solid @colorBorder !important;
 
 	&:hover {
-		background-color: @threadlist-hover !important;
+		background-color: @colorListItemHover !important;
 	}
 
 	&.focused,
@@ -34,7 +34,7 @@
 			.timestamp,
 			.subject,
 			.snippet-and-labels {
-				color: @threadlist-text-active;
+				color: @colorListTextActive;
 			}
 		}
 	}
