--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -4,10 +4,12 @@
 @colorAccent: #5294e2;
 
 @colorWindowBg: #f6f7f8;
+@colorWindowBgDarker: #e7e8eb;
 @colorBodyBg: #ffffff;
 @colorBodyBgDarker: darken(@colorBodyBg, 2%);
 @colorBorder: #d4d5db;
 @colorText: #231f20;
+@colorTextFaded: fade(@colorText, 50%);
 @colorWarningBar: darken(@colorWindowBg, 5%);
 
 @border-medium: #dcdfe3;
