Fix add folder button position in sidebar

--- a/styles/sidebar.less
+++ b/styles/sidebar.less
@@ -30,6 +30,8 @@
 	}
 
 	.add-item-button {
+		margin-top: -2px;
+
 		img.content-mask {
 			background-color: @colorSidebarTextDarker;
 			margin-top: 4px;
