Tweak preferences colors to better match Arc

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -44,7 +44,12 @@
 
 @colorBtnTextActive: #ffffff;
 
+@colorPrefsWindowBg: @colorWindowBg;
+@colorPrefsBodyBg: #ffffff;
+@colorPrefsTabHover: fade(@colorPrefsBodyBg, 60%);
+@colorPrefsTabActive: @colorPrefsBodyBg;
 
+@colorCheckboxBorder: #a6adbc;
 
 @threadlist: #ffffff;
 @threadlist-hover: tint(@colorSidebarBg, 90%);
@@ -64,11 +69,7 @@
 @default-btn-bg-active: #2e96c0;
 @default-btn-text: #ffffff;
 
-@prefs: @messagelist;
 @prefs-body: #ffffff;
-@prefs-tabs: @messagelist;
-@prefs-tabs-hover: #fafbfb;
-@prefs-tabs-active: #ffffff;
 
 @check-border: #a6adbc;
 
