--- a/styles/theme-colors.less
+++ b/styles/theme-colors.less
@@ -1,7 +1,7 @@
 @import 'arc-variables';
 
-@background-secondary:			@messagelist;
-@text-color:								@base-text;
+@background-secondary:			@colorBodyBg;
+@text-color:								@colorText;
 @component-active-color:		@colorAccent;
-@toolbar-background-color:	@threadlist;
+@toolbar-background-color:	@colorWindowBg;
 @panel-background-color:		@colorSidebarBg;
