Redo color variables in activity toolbar+dropdown

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -25,12 +25,9 @@
 
 @colorListBg: #ffffff;
 @colorListItemHover: tint(@colorSidebarBg, 90%);
+@colorListText: @colorText;
 @colorListTextActive: #ffffff;
-
-@colorMenuBg: #ffffff;
-@colorMenuItemHover: tint(@colorSidebarBg, 90%);
-@colorMenuText: @colorText;
-@colorMenuTextActive: #ffffff;
+@colorListTextActiveFaded: fade(@colorListTextActive, 50%);
 
 @colorBtnBgLight: #ffffff;
 @colorBtnBorderLight: #cfd6e6;
