--- a/styles/draftlist.less
+++ b/styles/draftlist.less
@@ -5,10 +5,10 @@
 //------------------------------------------------------------
 .column-DraftList {
 	// Needed to fake bottom border for drafts toolbar
-	border-top: 5px solid @messagelist;
+	border-top: 5px solid @colorWindowBg;
 
 	.draft-list {
-		border-top: 1px solid @border-medium;
+		border-top: 1px solid @colorBorder;
 	}
 }
 
@@ -16,24 +16,25 @@
 // Draft items
 //------------------------------------------------------------
 .draft-list .list-container .list-item {
-	background-color: @threadlist;
-	border-bottom: 1px solid @border-medium;
+	background-color: @colorListBg;
+	border-bottom: 1px solid @colorBorder;
 
 	.checkmark .inner {
-		border: 1px solid @check-border;
+		border: 1px solid @colorCheckboxBorder;
 	}
 
 	&:hover {
-		background-color: @threadlist-hover;
+		background-color: @colorListItemHover;
 
 		.checkmark .inner {
-			border-color: darken(@check-border, 5%);
+			border-color: @colorCheckboxBorder;
 		}
 	}
 
 	&.selected {
 		.checkmark .inner {
 			background-color: @colorAccent;
+			border-color: @colorAccent;
 		}
 	}
 
