Remove color variable

--- a/styles/threadlist-toolbar.less
+++ b/styles/threadlist-toolbar.less
@@ -47,7 +47,7 @@
 // Drafts/trash empty button header
 //------------------------------------------------------------
 .thread-list-empty-folder-bar {
-	background-color: @colorWindowBgDarker;
+	background-color: @colorWarningBar;
 	border-bottom-color: @colorBorder;
 
 	.notice {
