Tweak message draft colors to better match Arc

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -11,8 +11,6 @@
 @colorTextFaded: fade(@colorText, 50%);
 @colorWarningBar: darken(@colorWindowBg, 5%);
 
-@border-medium: #dcdfe3;
-
 @base-text: #231f20;
 
 @colorSidebarBg: #353945;
@@ -38,6 +36,11 @@
 @colorBtnBgActiveDark: @colorAccent;
 @colorBtnBorderActiveDark: #2b2e39;
 
+@colorBtnDefaultBg: #4dadd4;
+@colorBtnDefaultBgHover: #76c0de;
+@colorBtnDefaultBgActive: #2e96c0;
+@colorBtnDefaultText: #ffffff;
+
 @colorBtnTextActive: #ffffff;
 
 @colorPrefsWindowBg: @colorWindowBg;
@@ -51,18 +54,6 @@
 @threadlist-text-active: #ffffff;
 
 @messagelist: #f5f6f7;
-@messagearea: #ffffff;
-
-@btn-bg-hover: lighten(@messagelist, 15%);
-@btn-border-hover: #dddfe4;
-@btn-bg-active: @colorAccent;
-@btn-border-active: @colorAccent;
-@btn-icon-active: #ffffff;
-
-@default-btn-bg: #4dadd4;
-@default-btn-bg-hover: #76c0de;
-@default-btn-bg-active: #2e96c0;
-@default-btn-text: #ffffff;
 
 @prefs-body: #ffffff;
 
