Rename color variables

--- a/styles/messagelist.less
+++ b/styles/messagelist.less
@@ -311,7 +311,7 @@
 //------------------------------------------------------------
 #message-list .scrollbar-track,
 .composer-full-window .scrollbar-track {
-	background: @messagelist;
+	background: @colorWindowBg;
 	border-left: none;
 	width: 12px;
 
