--- a/styles/preferences.less
+++ b/styles/preferences.less
@@ -204,12 +204,12 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 // Scrollbar
 //------------------------------------------------------------
 .column-Preferences .scrollbar-track {
-	background: @prefs-body;
+	background: @colorPrefsBodyBg;
 	border-left: none;
 	width: 12px;
 
 	.scrollbar-handle {
-		background: fade(darken(@prefs-body, 45%), 40%);
+		background: fade(darken(@colorPrefsBodyBg, 45%), 40%);
 		border: none;
 	}
 }
