Rename scrollbar color variables

--- a/styles/activity.less
+++ b/styles/activity.less
@@ -4,12 +4,12 @@
 // Scroll bar
 //------------------------------------------------------------
 .activity-dashboard .scrollbar-track {
-	background: @threadlist;
+	background: @colorBodyBg;
 	border-left: none;
 	width: 12px;
 
 	.scrollbar-handle {
-		background: fade(darken(@threadlist, 45%), 40%);
+		background: fade(darken(@colorBodyBg, 45%), 40%);
 		border: none;
 	}
 }
