--- a/styles/draftlist.less
+++ b/styles/draftlist.less
@@ -47,12 +47,12 @@
 // Scroll bar
 //------------------------------------------------------------
 .draft-list .scrollbar-track {
-	background: @threadlist;
+	background: @colorListBg;
 	border-left: none;
 	width: 12px;
 
 	.scrollbar-handle {
-		background: fade(darken(@threadlist, 45%), 40%);
+		background: fade(darken(@colorListBg, 45%), 40%);
 		border: none;
 	}
 }
