--- a/styles/messagelist.less
+++ b/styles/messagelist.less
@@ -316,11 +316,11 @@
 	width: 12px;
 
 	.scrollbar-handle {
-		background: fade(darken(@threadlist, 45%), 40%);
+		background: fade(darken(@colorBodyBg, 45%), 40%);
 		border: none;
 	}
 }
 
 .composer-full-window .scrollbar-track {
-	background: @threadlist;
+	background: @colorBodyBg;
 }
