--- a/styles/sidebar-toolbar.less
+++ b/styles/sidebar-toolbar.less
@@ -137,12 +137,12 @@ body.platform-linux .sheet-toolbar-container {
 	// Activity dropdown scrollbar
 	//---------------------------------
 	.scrollbar-track {
-		background: @threadlist;
+		background: @colorListBg;
 		border-left: none;
 		width: 12px;
 
 		.scrollbar-handle {
-			background: fade(darken(@threadlist, 45%), 40%);
+			background: fade(darken(@colorListBg, 45%), 40%);
 			border: none;
 		}
 	}
