--- a/styles/theme-selector.less
+++ b/styles/theme-selector.less
@@ -17,12 +17,12 @@
 // Scroll bar
 //------------------------------------------------------------
 .theme-picker .scrollbar-track {
- background: @threadlist;
+ background: @colorListBg;
  border-left: none;
  width: 12px;
 
  .scrollbar-handle {
-  background: fade(darken(@threadlist, 45%), 40%);
+  background: fade(darken(@colorListBg, 45%), 40%);
   border: none;
  }
 }
