--- a/styles/threadlist.less
+++ b/styles/threadlist.less
@@ -51,12 +51,12 @@
 // Scrollbar
 //------------------------------------------------------------
 .thread-list .scrollbar-track {
-	background: @threadlist;
+	background: @colorListBg;
 	border-left: none;
 	width: 12px;
 
 	.scrollbar-handle {
-		background: fade(darken(@threadlist, 45%), 40%);
+		background: fade(darken(@colorListBg, 45%), 40%);
 		border: none;
 	}
 }
