Change red/yellow warning colors to Arc colors

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -48,8 +48,10 @@
 
 @colorCheckboxBorder: #a6adbc;
 
-@colorWarningRed: #ed304b;
-@colorWarningYellow: #ed8830;
+// @colorWarningRed: #ed304b;
+// @colorWarningYellow: #ed8830;
+@colorWarningRed: #f04a50;
+@colorWarningYellow: #f27835;
 
 @base-text: #231f20;
 @threadlist-text-active: #ffffff;
