--- a/styles/message-draft.less
+++ b/styles/message-draft.less
@@ -9,7 +9,7 @@
 		//---------------------------------
 		// Normal token
 		//---------------------------------
-		box-shadow: none;
+		box-shadow: none !important;
 		background: darken(@colorWindowBg, 6%);
 		border: 1px solid @colorBorder;
 		border-radius: 2px;
