Rename color variable

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -14,7 +14,7 @@
 @colorSidebarBg: #353945;
 @colorSidebarItemHover: rgba(186, 195, 207, 0.15);
 @colorSidebarText: #bac3cf;
-@colorSidebarTextDarker: fade(@colorSidebarText, 50%);
+@colorSidebarTextFaded: fade(@colorSidebarText, 50%);
 @colorSidebarTextLighter: lighten(@colorSidebarText, 5%);
 @colorSidebarTextActive: #ffffff;
 
