--- a/styles/sidebar-toolbar.less
+++ b/styles/sidebar-toolbar.less
@@ -79,7 +79,7 @@ body.platform-linux .sheet-toolbar-container {
 	// Activity icon
 	//---------------------------------
 	.activity-toolbar-icon {
-		background-color: @colorSidebarTextDarker;
+		background-color: @colorSidebarTextFaded;
 
 		&:hover {
 			background-color: @colorSidebarText;
