--- a/styles/sidebar.less
+++ b/styles/sidebar.less
@@ -20,7 +20,7 @@
 		font-size: 13px;
 		text-transform: uppercase;
 		letter-spacing: 2px;
-		color: @colorSidebarTextDarker;
+		color: @colorSidebarTextFaded;
 		margin-bottom: 7px;
 		padding-top: 0px;
 	}
@@ -33,7 +33,7 @@
 		margin-top: -2px;
 
 		img.content-mask {
-			background-color: @colorSidebarTextDarker;
+			background-color: @colorSidebarTextFaded;
 			margin-top: 4px;
 		}
 	}
@@ -51,7 +51,7 @@
 	img.content-dark {
 		zoom: 1 !important;
 		background-image: none;
-		background-color: @colorSidebarTextDarker;
+		background-color: @colorSidebarTextFaded;
 		-webkit-mask-repeat: no-repeat;
 		-webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="6" viewBox="0 0 10 6"><path fill="#FFF" d="M0 0h1l4 4 4-4h1v1L5 6 0 1z"/></svg>');
 		transform: none;
@@ -148,7 +148,7 @@
 // Folder expand/collapse arrows
 //------------------------------------------------------------
 .disclosure-triangle.visible div {
-	border-left-color: @colorSidebarTextDarker;
+	border-left-color: @colorSidebarTextFaded;
 }
 
 //------------------------------------------------------------
@@ -181,7 +181,7 @@
 	//---------------------------------
 	.item h2 {
 		font-weight: 600;
-		color: @colorSidebarTextDarker;
+		color: @colorSidebarTextFaded;
 		margin: 6px 0px 12px;
 	}
 
@@ -210,7 +210,7 @@
 	// Progress labels
 	//---------------------------------
 	.item .sync-activity .account .folder-progress .progress-label {
-		color: @colorSidebarTextDarker;
+		color: @colorSidebarTextFaded;
 	}
 }
 
