Sidebar item contract/expand arrow hover color

--- a/styles/sidebar.less
+++ b/styles/sidebar.less
@@ -162,6 +162,10 @@
 	border-left-color: @colorSidebarTextFaded;
 }
 
+.disclosure-triangle.visible:hover div {
+	border-left-color: @colorSidebarText;
+}
+
 //------------------------------------------------------------
 // Sidebar syncing box
 //------------------------------------------------------------
