--- a/styles/contact-sidebar.less
+++ b/styles/contact-sidebar.less
@@ -33,9 +33,8 @@
 	}
 
 	.personal-info {
-		padding-left: 60px;
-		padding-top: 2px;
-		text-align: left;
+		padding-top: 30px;
+		text-align: center;
 
 		.selectable {
 			overflow: hidden;
